--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
     "svelte": "^4.2.8",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.0.8"
   }
 }
