Update website content with sales deck messaging
- Update hero section with 'See what's below, before you break it'
- Add utility strike statistics (B damages annually, 1 in 3 caused by errors)
- Update workflow section to reflect complete mapping process
- Update pricing section with 99% accuracy messaging
- Add complete mapping and AR visualization features to enterprise plan
- Fix duplicate workflow sections

--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "playwright test",
+    "puppeteer-server": "node tests/puppeteer-server.mjs"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.1",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
     "svelte": "^4.2.8",
     "tailwindcss": "^3.4.14",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
     "vite": "^5.0.8"
   }
 }
